Log any gc that happens